css/styles.css
/* Custom CSS RULES */


/*Nav Bar Top*/

.logo {
	width: 40px;
	margin-left: 5px;
}

@media only screen and (min-width: 40.063em) {
	.top-bar {
		height: 6rem;
		padding-top: 3rem;
		position: relative;
	}
	.social-icons {
		position: absolute;
		right: 0;
		top: -45px;
	}
	.logo {
		width: 70px;
		margin-top: -2.3rem;
	}
}

@media only screen and (min-width: 40.063em) {
	.social-icons {
		top: -35px;
	}
}


/*fonts*/

@font-face {
	font-family: Centuma-Thin;
	src: url("fonts/Centuma-Regular.otf");
}

@font-face {
	font-family: Centuma-Bold;
	src: url("fonts/Centuma-Bold.otf");
}


/*Font family styles*/

html * {
	font-family: centuma-thin;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: centuma-bold;
}

@media only screen and (max-width: 40.063em) {
	.cis-title {
		font-size: 1em;
	}
}

@media only screen and (min-width: 40.063em) {
	.cis-title {
		font-size: 2em;
	}
}

@media only screen and (min-width: 60.0625em) {
	.cis-title {
		font-size: 3em;
	}
}

.white-text {
	color: white;
}


/*Events Page Styles*/

.white-text {
	color: white;
}

.event {
	padding: 1rem 1rem 1rem 0;
	display: table;
}

.event-date {
	width: 6rem;
	margin: 0 auto 1rem;
	display: table-cell;
	width: auto;
}

.event-date .event-month {
	margin: 0;
	background: #343434;
	padding: 0.5rem 2rem;
	text-align: center;
	color: white;
}

.event-date .event-day {
	margin: 0;
	border: 1px solid #000;
	padding: 0 2rem;
	text-align: center;
	font-size: 2rem;
	background: #FFF;
}

.event-date .important {
	background-color: #EB2F15;
}

.event-desc {
	padding: 0 0 0 1rem;
	text-align: left;
	display: table-cell;
	vertical-align: top;
}

.event-desc .event-desc-header {
	margin: 0 0 0.5rem 0;
	padding: 0;
}

.event-desc .event-desc-detail {
	margin: 0 0 0.25rem;
	padding: 0;
}

.event-desc .event-desc-time {
	font-weight: bold;
}

.event-desc .rsvp.button {
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
	margin: 0;
	background-color: #395B7C;
}


/*Home page and generic styles here on*/


/*Icon Font Styles in Footer*/

.icon-font {
	color: white;
	font-size: 2em;
	margin: 0 1vw;
	padding: 0;
}


/*Max image height preventing fullscreen images

APPLY TO ALL IMAGES EXCEPT TITLE IMG
*/

.image-max {
	max-height: 30vh;
}


/*Call-2-Action Buttons and background image*/

.action-button {
	font-size: 0.875rem;
	text-shadow: #000 0px 0px 5px;
	color: #FFF;
	text-transform: uppercase;
	display: block;
	font-weight: bold;
	letter-spacing: 1px;
	background: rgba(250, 250, 250, 0.2);
	border: solid white 2px;
}

.action-button.is-active {
	background: #fff;
	color: #333;
	text-shadow: none;
}

.action-button:hover:not(.is-active) {
	background: rgba(250, 250, 250, 0.7);
	color: #333;
	transition: all .25s ease-in-out;
	text-shadow: none;
}

.action-button.is-active {
	background: #fff;
	color: #333;
	text-shadow: none;
}

.center-div {
	padding-top: 10rem;
}

.large-offset-0-5 {
	margin-left: 4.16666666%;
}


/*Background image for call 2 action*/

.header {
	background: url("../img/CIS%20Card%20Rock.jpg") no-repeat center center;
	background-size: cover;
	height: 20rem;
}

.header h1,
.header h4 {
	color: #666;
}

.large-box {
	padding: 100vw;
}

.subnav {
	float: none;
	position: relative;
	top: 2.2rem;
	text-align: center;
	margin-bottom: 0;
}

@media only screen and (max-width: 40em) {
	.header {
		height: 30vh;
		min-height: 12em;
	}
}

@media only screen and (max-width: 40.063em) {
	.subnav li a {
		padding: 5vw 5vw;
	}
}

@media only screen and (min-width: 40.063em) {
	.subnav li a {
		padding: 2vw 10vw;
	}
}

.subnav li {
	float: none;
	display: inline-block;
	border: 2px solid white;
	margin: 10rem 0 5rem;
}

.subnav li a {
	font-size: 0.875rem;
	color: #fff;
	text-transform: uppercase;
	display: block;
	font-weight: bold;
	letter-spacing: 1px;
}

.subnav li a.is-active {
	background: #fff;
	color: #333;
}

.subnav li a:hover:not(.is-active) {
	background: rgba(250, 250, 250, 0.7);
	color: #333;
	transition: all .25s ease-in-out;
}

.cover-bg {
	background-size: cover;
	background-position: center;
}

.xtra-dark {
	background-color: #000000;
	color: white;
}

.dark {
	background-color: #343434;
}

.highlight {
	background-color: #C2D5EB;
}

.light * {
	background-color: #D9D9D9;
}

.dark-blue {
	background-color: #1D324F;
}

.no-border {
	border: none;
}

.title-line {
	border: none;
	border-bottom: solid white 5px;
}

.full-width {
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	max-width: initial;
}

.action-image {
	background-position: center;
	background-repeat: no-repeat;
}

.vertical-center {
	padding-top: 30vh;
	padding-bottom: 5vh;
}

.top-bar-section ul {
	display: table;
	margin: 0 auto;
}

.top-bar-section ul li {
	display: table-cell;
}

@media only screen and (max-width: 40.063em) {
	div.icon-bar.label-right > * {
		text-align: left;
	}
	div.icon-bar {
		height: 100%;
		width: auto;
	}
	div.icon-bar .item {
		width: auto;
		margin: auto;
		float: none;
	}
}

